--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "url": "https://github.com/alexanderscott/node-deploy-hook"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "compression": "^1.7.4",
+    "errorhandler": "^1.5.1",
     "express": ">=3.11.0",
+    "node-cmd": "^5.0.0",
     "nodemailer": ">=6.2.1"
   },
   "engines": {
