--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "url": "https://github.com/alexanderscott/node-deploy-hook"
   },
   "dependencies": {
+    "axios": "^0.21.4",
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
     "errorhandler": "^1.5.1",
     "express": ">=3.11.0",
+    "ip-range-check": "^0.2.0",
     "node-cmd": "^5.0.0",
-    "nodemailer": ">=6.2.1"
+    "nodemailer": "^6.6.3"
   },
   "engines": {
     "node": ">= 0.8.0"
